--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
+absl-py==0.9.0
 alabaster==0.7.12
 alembic==1.3.2
 anaconda-client==1.7.2
 anaconda-project==0.8.3
 aniso8601==8.0.0
 asn1crypto==1.0.1
+astor==0.8.1
 astroid==1.6.5
 astropy==2.0.9
 atomicwrites==1.3.0
@@ -14,6 +16,7 @@ backports.functools-lru-cache==1.5
 backports.os==0.1.1
 backports.shutil-get-terminal-size==1.0.0
 backports.ssl-match-hostname==3.7.0.1
+backports.weakref==1.0.post1
 bcrypt==3.1.7
 beautifulsoup4==4.8.0
 bitarray==1.0.1
@@ -22,6 +25,7 @@ bleach==3.1.0
 bokeh==1.3.4
 boto==2.49.0
 Bottleneck==1.2.1
+cachetools==3.1.1
 cdecimal==2.3
 certifi==2019.11.28
 cffi==1.12.3
@@ -57,11 +61,16 @@ funcsigs==1.0.2
 functools32==3.2.3.post2
 future==0.17.1
 futures==3.3.0
+gast==0.2.2
 gevent==1.4.0
 glob2==0.7
 gmpy2==2.0.8
+google-auth==1.11.0
+google-auth-oauthlib==0.4.1
+google-pasta==0.1.8
 greenlet==0.4.15
 grin==1.2.1
+grpcio==1.27.1
 h5py==2.9.0
 HeapDict==1.0.1
 html5lib==1.0.1
@@ -87,6 +96,8 @@ jupyter-console==5.2.0
 jupyter-core==4.5.0
 jupyterlab==0.33.11
 jupyterlab-launcher==0.11.2
+Keras-Applications==1.0.8
+Keras-Preprocessing==1.1.0
 kiwisolver==1.1.0
 lazy-object-proxy==1.4.2
 libarchive-c==2.8
@@ -96,6 +107,7 @@ llvmlite==0.29.0
 locket==0.2.0
 lxml==4.4.1
 Mako==1.1.0
+Markdown==3.1.1
 MarkupSafe==1.1.1
 marshmallow==2.19.5
 matplotlib==2.2.3
@@ -119,8 +131,10 @@ numba==0.45.1+0.ga9c107beb.dirty
 numexpr==2.7.0
 numpy==1.16.5
 numpydoc==0.9.1
+oauthlib==3.1.0
 olefile==0.46
 openpyxl==2.6.3
+opt-einsum==2.3.2
 packaging==19.2
 pandas==0.24.2
 pandocfilters==1.4.2
@@ -138,10 +152,13 @@ pluggy==0.13.0
 ply==3.11
 prometheus-client==0.7.1
 prompt-toolkit==1.0.15
+protobuf==3.11.3
 psutil==5.6.3
 psycopg2==2.8.4
 ptyprocess==0.6.0
 py==1.8.0
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
 pycairo==1.18.1
 pycodestyle==2.5.0
 pycosat==0.6.3
@@ -166,13 +183,15 @@ pyzmq==18.1.0
 QtAwesome==0.6.0
 qtconsole==4.5.5
 QtPy==1.9.0
-requests==2.14.2
+requests==2.23.0
+requests-oauthlib==1.3.0
 rope==0.14.0
+rsa==4.0
 ruamel-yaml==0.15.46
 scandir==1.10.0
 scikit-image==0.14.2
 scikit-learn==0.20.3
-scipy==1.2.1
+scipy==1.2.2
 seaborn==0.9.0
 Send2Trash==1.5.0
 simplegeneric==0.8.1
@@ -192,6 +211,11 @@ subprocess32==3.5.4
 sympy==1.4
 tables==3.5.2
 tblib==1.4.0
+tensorboard==2.1.0
+tensorflow-cpu==2.1.0
+tensorflow-estimator==2.1.0
+tensorflow-hub==0.7.0
+termcolor==1.1.0
 terminado==0.8.2
 testpath==0.4.2
 toolz==0.10.0
