--- a/client/bower.json
+++ b/client/bower.json
@@ -18,7 +18,9 @@
     "ui-select": "angular-ui-select#^0.16.0",
     "d3-tip": "^0.6.7",
     "topojson": "^1.6.24",
-    "angular-busy": "^4.1.3"
+    "angular-busy": "^4.1.3",
+    "angular-chart.js": "^1.1.1",
+    "angularjs-nvd3-directives": "^0.0.7"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
