--- a/client/package.json
+++ b/client/package.json
@@ -33,7 +33,7 @@
     "karma-jasmine": "*",
     "karma-phantomjs-launcher": "*",
     "phantomjs": "^2.1.3",
-    "phantomjs-prebuilt": "^2.1.5",
+    "phantomjs-prebuilt": "^2.1.7",
     "time-grunt": "^1.0.0"
   },
   "engines": {
@@ -41,5 +41,8 @@
   },
   "scripts": {
     "test": "grunt test"
+  },
+  "dependencies": {
+    "angular-chart.js": "^1.1.1"
   }
 }
